logs/Slang/generic/member/class_member_test_42.sv.log
name: class_member_test_42
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:7:1: error: language feature not yet supported
class constructible;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:9: error: expected identifier
function new (string name, virtual time_if vif);
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:10: error: expected statement
function new (string name, virtual time_if vif);
         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:27: error: expected identifier
function new (string name, virtual time_if vif);
                          ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:28: error: expected declarator
function new (string name, virtual time_if vif);
                           ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:35: error: expected ','
function new (string name, virtual time_if vif);
                                  ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:43: error: expected ','
function new (string name, virtual time_if vif);
                                          ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_42.sv:8:47: error: expected declarator
function new (string name, virtual time_if vif);
                                              ^
